# HeartAI

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.obsidian/: app.json  workspace.json
docs/source/: conf.py  heart_neural_network.rst  index.rst  installation.rst  modules.rst  usage.rst  website.rst
heart_neural_network/: __init__.py  predict_model.py  train_model.py
website/: __init__.py  app.py
website/static/: script.js  style.css
website/templates/: index.html
